added 3d files, button to download static files, and updated screenshot and SEO meta tags and updated readme

--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solder Stencil PCB Holder</title>
 
+    <!-- SEO Tags -->
+    <meta name="description" content="Solder Stencil PCB Holder is a user-friendly web app allowing you to create a custom tray for your PCB for applying solder paste to your boards using a solder stencil.">
+    <meta name="keywords" content="Solder Stencil PCB Holder">
+    <link rel="canonical" href="https://curlytalegamesllc.github.io/SolderStencilPCBHolder/" />
+    <meta name="robots" content="index,follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://curlytalegamesllc.github.io/SolderStencilPCBHolder/">
+    <meta property="og:title" content="Solder Stencil PCB Holder">
+    <meta property="og:description" content="Solder Stencil PCB Holder is a user-friendly web app allowing you to create a custom tray for your PCB for applying solder paste to your boards using a solder stencil.">
+    <meta property="og:image" content="https://curlytalegamesllc.github.io/SolderStencilPCBHolder/screenshot.png">
+    <meta property="og:image:alt" content="Screenshot of Solder Stencil PCB Holder web app interface, create a custom tray to hold your PCB while you apply solder paste using a stencil.">
+    
+    <!-- Twitter Card -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://curlytalegamesllc.github.io/SolderStencilPCBHolder/">
+    <meta property="twitter:title" content="Solder Stencil PCB Holder">
+    <meta property="twitter:description" content="Solder Stencil PCB Holder is a user-friendly web app allowing you to create a custom tray for your PCB for applying solder paste to your boards using a solder stencil.">
+    <meta property="twitter:image" content="https://curlytalegamesllc.github.io/SolderStencilPCBHolder/screenshot.png">
+    <meta property="twitter:image:alt" content="Screenshot of Solder Stencil PCB Holder web app interface, create a custom tray to hold your PCB while you apply solder paste using a stencil.">
+
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
@@ -69,12 +91,12 @@
     <div class="container my-5">
 
         <!-- Full-width Column for Title and Description -->
-        <div class="row mb-4">
+        <div class="row">
             <div class="col-12 text-center">
                 <i class="fas fa-microchip mb-4"></i>
                 <h1 class="mb-4">Solder Stencil PCB Holder</h1>
                 <p class="description">Stencil holders allow you to line up and apply solder paste to your PCBs perfectly every time.</p>
-				<p>Enter the dimensions of your PCB to download the corresponding STL file.</p>
+				<p>Enter the dimensions of your PCB to download the corresponding STL file. You will also need to download the static STL files.</p>
             </div>
         </div>
 
@@ -82,13 +104,7 @@
         <div class="row align-items-center">
             <!-- Left Column for Image -->
             <div class="col-md-6 mb-4 mb-md-0 text-center" id="canvas-container">
-                <!-- <img src="screenshot.png" class="img-fluid" alt="Descriptive Alt Text"> -->
-                <canvas id="myCanvas" class=""></canvas>
-                <!-- <div class="text-center">
-                    <button type="button" class="btn btn-primary btn-download btn-lg" id="reset">
-                        <i class="fas fa-undo"></i> Reset View
-                    </button>
-                </div> -->
+                <canvas id="myCanvas"></canvas>
             </div>
 
             <!-- Right Column for Form -->
@@ -130,14 +146,17 @@
                             <option value="0.8">0.8mm</option>
                         </select>
                     </div>
-                    <!-- More input groups here -->
-                    <div class="text-center">
-                        <button type="button" class="btn btn-primary btn-download btn-lg" id="export-stl">
-                            <i class="fas fa-download"></i> Download STL
+                    <!-- Button container -->
+                    <div class="d-grid gap-2">
+                        <button type="button" class="btn btn-primary btn-lg" id="export-stl">
+                            <i class="fas fa-download"></i> Download Custom Tray STL
                         </button>
+                        <a href="./3D/PCBStencil.zip" class="btn btn-secondary btn-lg" download>
+                            <i class="fas fa-download"></i> Download Static STL Files
+                        </a>
                     </div>
 					<hr/>
-                    <p class="mt-3">Is your PCB not a rectangle, or is an odd size? <a href="#">Download the STEP file to customize in your CAD package of choice.</a></p>
+                    <p class="mt-3">Is your PCB not a rectangle, or is an odd size? <a href="./3D/PCBStencil_CustomTray_Blank.zip" download>Download the STEP file to customize in your CAD package of choice.</a></p>
                 </form>
             </div>
         </div>
