removed mention of OpenSCAD

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 		 <!-- Credits Line -->
         <div class="row">
             <div class="col-12 credits">
-                <p>Web app and OpenSCAD model by <a href="https://curlytalegames.com/" target="_blank">Curly Tale Games</a>, credit to <a href="https://www.thingiverse.com/thing:6313798" target="_blank">Michael Graham on Thingiverse</a> for designing the original STL.</p>
+                <p>Web app and ThreeJS model by <a href="https://curlytalegames.com/" target="_blank">Curly Tale Games</a>, credit to <a href="https://www.thingiverse.com/thing:6313798" target="_blank">Michael Graham on Thingiverse</a> for designing the original STL.</p>
 				<p><a href="https://github.com/CurlyTaleGamesLLC/SolderStencilPCBHolder">Source files available on GitHub repository<a></p>
             </div>
         </div>
